## CHANGELOG

- __2011/01/27__: 0.4.1 release.
    - Tweaking the description in natto.gemspec a bit 

- __2011/01/26__: 0.4.0 release.
    - Added support for mecab option input-buffer-size 
    - Adding CHANGELOG file 
    - Continuing update of documentation

- __2011/01/22__: 0.3.0 release.
    - Refactoring of Natto::Binding to make mecab methods available as class methods
    - Refactoring of Natto::DictionaryInfo to override to_s method to return filename
    - Refactoring of Natto::MeCab to use class methods in Natto::Binding
    - Refactoring and logical separation of test cases
    - Continuing update of documentation

- __2011/01/19__: 0.2.0 release.
    - Added support for mecab option allocate-sentence 
    - Continuing update of documentation

- __2011/01/15__: 0.1.1 release.
    - Refactored Natto::DictionaryInfo#method_missing
    - Continuing update of documentation

- __2011/01/15__: 0.1.0 release.
    - Added accessors to Natto::DictionaryInfo
    - Added accessor for version in Natto::MeCab
    - Continuing update of documentation

- __2011/01/13__: 0.0.9 release.
    - Further development and testing for mecab dictionary access/destruction
    - Continuing update of documentation

- __2011/01/07__: 0.0.8 release.
    - Adding support for accessing dictionaries 
    - Further tweaking of documentation with markdown

- __2010/12/30__: 0.0.7 release.
    - Adding support for all-morphs and partial options
    - Further updating of documentation with markdown

- __2010/12/28__: 0.0.6 release.
    - Correction to natto.gemspec to include lib/natto/binding.rb

- __2010/12/28__: 0.0.5 release. (yanked)
    - On-going refactoring
    - Project structure refactored for greater maintainability

- __2010/12/26__: 0.0.4 release.
    - On-going refactoring

- __2010/12/23__: 0.0.3 release.
    - On-going refactoring
    - Adding documentation via yard

- __2010/12/20__: 0.0.2 release.
    - Continuing development on proper resource deallocation