@@ -21,12 +21,15 @@ class TestNattoBinding < Test::Unit::TestCase
   # Tests for the inclusion of mecab methods made available
   # to any classes including the Natto::Binding module.
   def test_functions_included
-    [  :mecab_version, 
-       :mecab_new2, 
+    [  :mecab_new2, 
+       :mecab_version, 
+       :mecab_strerror,
        :mecab_destroy, 
+       :mecab_set_theta,
+       :mecab_set_lattice_level,
+       :mecab_set_all_morphs,
        :mecab_sparse_tostr, 
        :mecab_nbest_sparse_tostr, 
-       :mecab_strerror,
        :mecab_dictionary_info ].each do |f|
        assert(@klass.respond_to? f)
     end
