@@ -1,5 +1,9 @@
 ## CHANGELOG
 
+- __2011/02/??__: 0.5.0 release.
+    - Added support for mecab option nbest, all-morphs
+    - Pulling support for mecab option partial, since it is a command-line feature
+
 - __2011/01/27__: 0.4.1 release.
     - Tweaking the description in natto.gemspec a bit 
 
